--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -156,8 +156,8 @@ body.still-loading .repl {
     margin: 0;
     padding-top: 1rem;
     flex: 4;
-    transition: flex 300ms ease-in-out, opacity 300ms ease-in-out;
-    background: var(--color-ui-01);
+    transition: flex 300ms ease-in-out, opacity 300ms ease-in-out, background-color 300ms ease-in-out;
+    background-color: var(--color-ui-01);
 }
 .repl-inner {
     overflow-y: auto;
@@ -187,6 +187,7 @@ body:not(.subwindow) repl.sidecar-visible .repl-block, .sidecar-full-screen repl
     border-collapse: collapse;
     border: 1px solid;
     margin-top: 0.75em;
+    transition: border-color 300ms ease-in-out;
 }
 .result-as-fixed-tables .result-table, .result-as-fixed-tables.result-table {
     table-layout: fixed;
@@ -483,6 +484,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
     vertical-align: middle;
     padding: 0 0.375rem;
     border-top: 1px solid var(--color-ui-04);
+    transition: all 300ms ease-in-out;
 }
 .entity .entity-kind {
     min-width: 7em;
@@ -762,7 +764,7 @@ sidecar .sidecar-bottom-stripe .sidecar-bottom-stripe-maximize {
 .sidecar-bottom-stripe .sidecar-bottom-stripe-button {
     padding: 1ex 0.4375rem; /* rem important to avoid oddities when font zooming */
     border-bottom: 2px solid transparent; /* will change color on hover */
-    transition: all 150ms ease-in-out;
+    transition: all 150ms ease-in-out, border-color 300ms ease-in-out;
 }
 sidecar .sidecar-header .limits {
     /* don't show limits in header for now */
@@ -2337,7 +2339,8 @@ sidecar.activation-success-false .sidecar-header-icon, span[data-extra-decoratio
 
 .result-table .entity:nth-child(2n + 1) td, .result-table .entity:nth-child(2n + 1) .entity-attributes {
     /* table row striping */
-    background:var(--color-ui-02);
+    background-color: var(--color-ui-02);
+    transition: background-color 300ms ease-in-out;
 }
 body:not(.subwindow) sidecar .result-table .entity:nth-child(2n + 1) td, body:not(.subwindow) sidecar .result-table .entity:nth-child(2n + 1) .entity-attributes {
     /* table row striping in sidecar (when not full screen) */
@@ -2346,7 +2349,8 @@ body:not(.subwindow) sidecar .result-table .entity:nth-child(2n + 1) td, body:no
 
 sidecar .sidecar-header {
     border-bottom-color: var(--color-content-divider);
-    background: var(--color-ui-01);
+    background-color: var(--color-ui-01);
+    transition: background-color 300ms ease-in-out, border-color 300ms ease-in-out;
 }
 
 sidecar .sidecar-header badge {
@@ -2393,6 +2397,7 @@ badge.clickable:hover {
 .sidecar-bottom-stripe {
     color: var(--color-ui-01);
     background: var(--color-stripe-02);
+    transition: background-color 300ms ease-in-out, color 300ms ease-in-out;
 }
 body[kui-theme-style="dark"] .sidecar-bottom-stripe {
     color: var(--color-text-01);
