fix: git diff should use side-by-side
Fixes #617

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -1044,7 +1044,7 @@ sidecar:not(.entity-is-triggers) .trigger-content {
 sidecar.entity-is-actions:not(.entity-is-sequence) .action-source, sidecar .activation-result, code.hljs, .code-highlighting pre {
     font-family: var(--font-monospace);
     font-weight: 400;
-    font-size: 90%;
+    font-size: 0.925em;
     white-space: pre-wrap;
     background: transparent;
 }
