--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/dracula.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/dracula.css
@@ -21,7 +21,9 @@ body[kui-theme="Dracula"] {
     --color-base0F: #00f769;
 
     --color-light-red: hsla(322, 78%, 62%, 0.75);
+    --color-green: var(--color-base0A);
     --color-light-green: hsla(146, 100%, 48%, 0.75);
+    --color-yellow: var(--color-base0B);
     --color-light-yellow: hsla(70, 100%, 76%, 0.75);
 
     --color-latency-0: #4d4d4d;
