feat(plugins/plugin-wrk): wrk plugin
Fixes #624

--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/atelier-seaside.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/atelier-seaside.css
@@ -24,6 +24,7 @@ body[kui-theme="Atelier Seaside"] {
 
     --color-light-red: hsla(350, 80%, 50%, 0.75);
     --color-light-green: hsla(120, 60%, 40%, 0.75);
+    --color-yellow: var(--color-base09);
     --color-light-yellow: hsla(48, 65%, 32%, 0.75);
 
     --color-latency-0: #01665e;
