--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -660,7 +660,7 @@ badge.clickable:hover {
     border-radius: 0;
 }
 .entity .repl-result-prefix, .entity .border-right {
-    border-right: 2px solid;
+    border-right: 1px solid;
 }
 .package-prefix {
     display: inline-block;
@@ -2383,8 +2383,7 @@ badge.clickable:hover {
     color: hsla(12, 45%, 45%, 1);
 }
 .entity .repl-result-prefix, .entity .border-right {
-    color: var(--color-text-01);
-    border-right-color: var(--color-ui-04);
+    border-right-color: var(--color-content-divider);
 }
 .entity.actions.sequence .repl-result-prefix {
     color: hsla(265, 87%, 26%, 1);
@@ -2596,4 +2595,16 @@ body {
 
     --color-tag-beta-fill: var(--color-base05);
     --color-tag-beta-text: var(--color-base01);
+
+    /* default latency color spectrum */
+    --color-latency-0: #2166ac;
+    --color-latency-1: #67a9cf;
+    --color-latency-2: hsla(201, 51%, 78%, 1); /* #d1e5f0 with lightness reduced from 88% to 78% */
+    --color-latency-3: #fddbc7;
+    --color-latency-4: #ef8a62;
+    --color-latency-5: #b2182b;
+
+    /* two-color charts; yellow versus cyan should be a pretty good default */
+    --color-chart-0: var(--color-yellow);
+    --color-chart-1: var(--color-cyan);
 }
