fix(packages/kui-builder): fixes for nord and zenburn colors
Fixes #642

--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/zenburn.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/zenburn.css
@@ -11,17 +11,17 @@ body[kui-theme="Zenburn"] {
     --color-base05: #dcdccc;
     --color-base06: #c0c0c0;
     --color-base07: #ffffff;
-    --color-base08: #dca3a3;
+    --color-base08: hsla(0, 45%, 60%, 1); /* dialed L down from 75% #dca3a3 */
     --color-base09: #dfaf8f;
     --color-base0A: #e0cf9f;
-    --color-base0B: #5f7f5f;
+    --color-base0B: hsla(120, 14%, 60%, 1); /* dialed L up from 44% #5f7f5f; */
     --color-base0C: #93e0e3;
     --color-base0D: #7cb8bb;
     --color-base0E: #dc8cc3;
     --color-base0F: #000000;
 
-    --color-light-red: hsla(0, 50%, 75%, 0.75);
-    --color-light-green: hsla(66, 39%, 57%, 75%);
+    --color-light-red: hsla(0, 45%, 60%, 0.75);
+    --color-light-green: hsla(120, 14%, 60%, 75%);
     --color-light-yellow: hsl(40, 81%, 70%);
 
     --color-latency-0: #1a9850;
