--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/paraiso.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/paraiso.css
@@ -5,8 +5,8 @@
  */
 body[kui-theme="Paraiso"] {
     --color-base00: #2f1e2e;
-    --color-base01: #41323f;
-    --color-base02: #4f424c;
+    --color-base01: hsl(308, 13%, 20%); /* #41323f; */
+    --color-base02: hsl(314, 9%, 24%); /* #4f424c; */
     --color-base03: hsl(340, 4%, 23%); /* dialed down from L=45% to 23% from #776e71 */
     --color-base04: #8d8687;
     --color-base05: hsla(23, 4%, 73%, 1); /* dialed from L=62% to 70% from #a39e9b */
