--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/gruvbox-dark-medium.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/gruvbox-dark-medium.css
@@ -6,9 +6,9 @@ body[kui-theme="Gruvbox Medium"] {
     --color-base00: #282828;
     --color-base01: #3c3836;
     --color-base02: #504945;
-    --color-base03: #665c54;
+    --color-base03: hsl(27, 10%, 25%); /* dialed L from 36% #665c54 */
     --color-base04: #bdae93;
-    --color-base05: hsl(40, 38%, 80%); /* dialed L from 73% to 80% from #d5c4a1 */
+    --color-base05: hsl(40, 38%, 80%); /* dialed L from 73% #d5c4a1 */
     --color-base06: #ebdbb2;
     --color-base07: #fbf1c7;
     --color-base08: #fb4934;
@@ -16,7 +16,7 @@ body[kui-theme="Gruvbox Medium"] {
     --color-base0A: #fabd2f;
     --color-base0B: #b8bb26;
     --color-base0C: #8ec07c;
-    --color-base0D: #83a598;
+    --color-base0D: hsl(157, 16%, 70%); /* dialed L from 58% #83a598 */
     --color-base0E: #d3869b;
     --color-base0F: #d65d0e;
 
