--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/zenburn.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/zenburn.css
@@ -6,15 +6,15 @@ body[kui-theme="Zenburn"] {
     --color-base00: #383838;
     --color-base01: #404040;
     --color-base02: #606060;
-    --color-base03: #6f6f6f;
+    --color-base03: hsl(0, 0%, 29%); /* dialed L down from 44% #6f6f6f */
     --color-base04: #808080;
     --color-base05: #dcdccc;
     --color-base06: #c0c0c0;
     --color-base07: #ffffff;
-    --color-base08: hsla(0, 45%, 60%, 1); /* dialed L down from 75% #dca3a3 */
+    --color-base08: hsl(0, 45%, 60%); /* dialed L down from 75% #dca3a3 */
     --color-base09: #dfaf8f;
     --color-base0A: #e0cf9f;
-    --color-base0B: hsla(120, 14%, 60%, 1); /* dialed L up from 44% #5f7f5f; */
+    --color-base0B: hsl(120, 14%, 60%); /* dialed L up from 44% #5f7f5f */
     --color-base0C: #93e0e3;
     --color-base0D: #7cb8bb;
     --color-base0E: #dc8cc3;
