--- a/plugins/plugin-editor/web/css/dark.css
+++ b/plugins/plugin-editor/web/css/dark.css
@@ -1,93 +1,130 @@
-/*
-  Five-color theme from a single blue hue.
-*/
-.monaco-editor {
+body[kui-theme-style="dark"] .monaco-editor {
   display: block;
   overflow-x: auto;
   padding: 0.5em;
   background: var(--color-ui-02);
 }
-body[kui-theme="dark"] .monaco-editor {
+body[kui-theme-style="dark"] .monaco-editor {
     background: transparent;
 }
 
-.monaco-editor {
+/* these are the indentation indicators */
+body[kui-theme-style="dark"] .monaco-editor .lines-content .cigra {
+    box-shadow: 1px 0 0 0 var(--color-base03) inset;
+    transition: box-shadow 300ms ease-in-out;
+}
+body[kui-theme-style="dark"] .monaco-editor .lines-content .cigr {
+    box-shadow: 1px 0 0 0 var(--color-base04) inset;
+    transition: box-shadow 300ms ease-in-out;
+}
+
+body[kui-theme-style="dark"] .monaco-editor .selected-text {
+    transition: background 300ms ease-in-out;
+    background: var(--color-selection-background);
+    opacity: 0.3; /* i don't know why the selection outside of monaco is different, despite using the same CSS styling */
+}
+
+body[kui-theme-style="dark"] .monaco-editor {
+    transition: color 300ms ease-in-out;
     color: var(--color-text-01);
 }
 
-.monaco-editor .current-line ~ .line-numbers {
-    color: var(--color-brand-02) !important;
+body[kui-theme-style="dark"] .monaco-editor .current-line ~ .line-numbers {
+    transition: color 300ms ease-in-out;
+    color: var(--color-brand-02);
 }
-.monaco-editor .line-numbers {
-    color: var(--color-text-02) !important;
+body[kui-theme-style="dark"] .monaco-editor .line-numbers {
+    transition: color 300ms ease-in-out;
+    color: var(--color-text-02);
     font-weight: 300;
 }
 
-.monaco-editor .mtk8,
-.monaco-editor .keyword {
+body[kui-theme-style="dark"] .monaco-editor .mtk8,
+body[kui-theme-style="dark"] .monaco-editor .keyword {
+    transition: color 300ms ease-in-out;
     color: var(--color-base0E);
 }
 
-.monaco-editor .mtk6,
-.monaco-editor .selector-tag,
-.monaco-editor .title,
-.monaco-editor .section,
-.monaco-editor .doctag,
-.monaco-editor .name,
-.monaco-editor .strong {
+body[kui-theme-style="dark"] .monaco-editor .mtk6,
+body[kui-theme-style="dark"] .monaco-editor .selector-tag,
+body[kui-theme-style="dark"] .monaco-editor .title,
+body[kui-theme-style="dark"] .monaco-editor .section,
+body[kui-theme-style="dark"] .monaco-editor .doctag,
+body[kui-theme-style="dark"] .monaco-editor .name,
+body[kui-theme-style="dark"] .monaco-editor .strong {
     font-weight: bold;
     color: inherit;
 }
 
-.monaco-editor .mtk22 {
+body[kui-theme-style="dark"] .monaco-editor .mtk22, body[kui-theme-style="dark"] .monaco-editor .mtk4 {
     /* map keys */
-    color: var(--color-brand-03);
+    /* notes:
+       mtk22 is the CSS class for YAML keys
+       mtk4 is the CSS class for JSON keys
+   */
+    transition: color 300ms ease-in-out;
+    color: var(--color-base0C);
 }
 
-.monaco-editor .mtk1 {
+body[kui-theme-style="dark"] .monaco-editor .mtk1 {
     /* map keys */
+    transition: color 300ms ease-in-out;
     color: var(--color-text-01);
 }
-.monaco-editor .mtk5 {
+body[kui-theme-style="dark"] .monaco-editor .mtk5 {
     /* map values */
+    transition: color 300ms ease-in-out;
     color: var(--color-text-01);
 }
 
-.monaco-editor .mti20,
-.monaco-editor .comment {
+body[kui-theme-style="dark"] .monaco-editor .mti20,
+body[kui-theme-style="dark"] .monaco-editor .comment {
+    transition: color 300ms ease-in-out;
     color: var(--color-base03);
 }
 
-.monaco-editor .mtk20,
-.monaco-editor .mtk7,
-.monaco-editor .string,
-.monaco-editor .title,
-.monaco-editor .section,
-.monaco-editor .built_in,
-.monaco-editor .literal,
-.monaco-editor .type,
-.monaco-editor .addition,
-.monaco-editor .tag,
-.monaco-editor .quote,
-.monaco-editor .name,
-.monaco-editor .selector-id,
-.monaco-editor .selector-class {
+body[kui-theme-style="dark"] .monaco-editor .mtk20,
+body[kui-theme-style="dark"] .monaco-editor .mtk7,
+body[kui-theme-style="dark"] .monaco-editor .string,
+body[kui-theme-style="dark"] .monaco-editor .title,
+body[kui-theme-style="dark"] .monaco-editor .section,
+body[kui-theme-style="dark"] .monaco-editor .built_in,
+body[kui-theme-style="dark"] .monaco-editor .literal,
+body[kui-theme-style="dark"] .monaco-editor .type,
+body[kui-theme-style="dark"] .monaco-editor .addition,
+body[kui-theme-style="dark"] .monaco-editor .tag,
+body[kui-theme-style="dark"] .monaco-editor .quote,
+body[kui-theme-style="dark"] .monaco-editor .name,
+body[kui-theme-style="dark"] .monaco-editor .selector-id,
+body[kui-theme-style="dark"] .monaco-editor .selector-class {
+    transition: color 300ms ease-in-out;
     color: var(--color-base0D);
 }
 
-.monaco-editor .meta,
-.monaco-editor .subst,
-.monaco-editor .symbol,
-.monaco-editor .regexp,
-.monaco-editor .attribute,
-.monaco-editor .deletion,
-.monaco-editor .variable,
-.monaco-editor .template-variable,
-.monaco-editor .link,
-.monaco-editor .bullet {
+body[kui-theme-style="dark"] .monaco-editor .meta,
+body[kui-theme-style="dark"] .monaco-editor .subst,
+body[kui-theme-style="dark"] .monaco-editor .symbol,
+body[kui-theme-style="dark"] .monaco-editor .regexp,
+body[kui-theme-style="dark"] .monaco-editor .attribute,
+body[kui-theme-style="dark"] .monaco-editor .deletion,
+body[kui-theme-style="dark"] .monaco-editor .variable,
+body[kui-theme-style="dark"] .monaco-editor .template-variable,
+body[kui-theme-style="dark"] .monaco-editor .link,
+body[kui-theme-style="dark"] .monaco-editor .bullet {
+    transition: color 300ms ease-in-out;
     color: var(--color-base03);
 }
 
-.monaco-editor .emphasis {
+body[kui-theme-style="dark"] .monaco-editor .emphasis {
   font-style: italic;
+}
+
+/* hover/tooltip */
+body[kui-theme-style="dark"] .monaco-editor-overlaymessage .message {
+    background-color: var(--color-base0C);
+    border-color: var(--color-base0C);
+    color: var(--color-base01) !important;
+}
+body[kui-theme-style="dark"] .monaco-editor-overlaymessage .anchor {
+    border-top-color: var(--color-base0C);
 }
