--- a/plugins/plugin-editor/web/css/mono-blue.css
+++ b/plugins/plugin-editor/web/css/mono-blue.css
@@ -7,18 +7,21 @@
   padding: 0.5em;
   background: #eaeef3;
 }
-body[kui-theme="dark"] .monaco-editor {
+body[kui-theme-style="light"] .monaco-editor {
     background: transparent;
 }
 
 .monaco-editor {
+  transition: color 300ms ease-in-out;
   color: #00193a;
 }
 
 .monaco-editor .current-line ~ .line-numbers {
+    transition: color 300ms ease-in-out;
     color: var(--color-brand-02);
 }
 .monaco-editor .line-numbers {
+    transition: color 300ms ease-in-out;
     color: var(--color-brand-01);
 }
 
@@ -36,24 +39,29 @@ body[kui-theme="dark"] .monaco-editor {
 
 .monaco-editor .mtk22 {
     /* map keys */
-    color: var(--color-brand-03);
+    transition: color 300ms ease-in-out;
+    color: #0048ab;
 }
 
 .monaco-editor .mtk1 {
     /* map keys */
+    transition: color 300ms ease-in-out;
     color: var(--color-text-02);
 }
 .monaco-editor .mtk5 {
     /* map values */
+    transition: color 300ms ease-in-out;
     color: var(--color-text-01);
 }
 
 .monaco-editor .mti20,
 .monaco-editor .comment {
+  transition: color 300ms ease-in-out;
   color: #738191;
 }
-body[kui-theme="dark"] .monaco-editor .mti20,
-body[kui-theme="dark"] .monaco-editor .comment {
+body[kui-theme-style="light"] .monaco-editor .mti20,
+body[kui-theme-style="light"] .monaco-editor .comment {
+    transition: color 300ms ease-in-out;
     color: #969896;
 }
 
@@ -71,22 +79,24 @@ body[kui-theme="dark"] .monaco-editor .comment {
 .monaco-editor .name,
 .monaco-editor .selector-id,
 .monaco-editor .selector-class {
+  transition: color 300ms ease-in-out;
   color: #0048ab;
 }
-body[kui-theme="dark"] .monaco-editor .mtk20,
-body[kui-theme="dark"] .monaco-editor .mtk7,
-body[kui-theme="dark"] .monaco-editor .string,
-body[kui-theme="dark"] .monaco-editor .title,
-body[kui-theme="dark"] .monaco-editor .section,
-body[kui-theme="dark"] .monaco-editor .built_in,
-body[kui-theme="dark"] .monaco-editor .literal,
-body[kui-theme="dark"] .monaco-editor .type,
-body[kui-theme="dark"] .monaco-editor .addition,
-body[kui-theme="dark"] .monaco-editor .tag,
-body[kui-theme="dark"] .monaco-editor .quote,
-body[kui-theme="dark"] .monaco-editor .name,
-body[kui-theme="dark"] .monaco-editor .selector-id,
-body[kui-theme="dark"] .monaco-editor .selector-class {
+body[kui-theme-style="light"] .monaco-editor .mtk20,
+body[kui-theme-style="light"] .monaco-editor .mtk7,
+body[kui-theme-style="light"] .monaco-editor .string,
+body[kui-theme-style="light"] .monaco-editor .title,
+body[kui-theme-style="light"] .monaco-editor .section,
+body[kui-theme-style="light"] .monaco-editor .built_in,
+body[kui-theme-style="light"] .monaco-editor .literal,
+body[kui-theme-style="light"] .monaco-editor .type,
+body[kui-theme-style="light"] .monaco-editor .addition,
+body[kui-theme-style="light"] .monaco-editor .tag,
+body[kui-theme-style="light"] .monaco-editor .quote,
+body[kui-theme-style="light"] .monaco-editor .name,
+body[kui-theme-style="light"] .monaco-editor .selector-id,
+body[kui-theme-style="light"] .monaco-editor .selector-class {
+    transition: color 300ms ease-in-out;
     color: #cc6666
 }
 
@@ -100,21 +110,33 @@ body[kui-theme="dark"] .monaco-editor .selector-class {
 .monaco-editor .template-variable,
 .monaco-editor .link,
 .monaco-editor .bullet {
+  transition: color 300ms ease-in-out;
   color: #4c81c9;
 }
-body[kui-theme="dark"] .monaco-editor .meta,
-body[kui-theme="dark"] .monaco-editor .subst,
-body[kui-theme="dark"] .monaco-editor .symbol,
-body[kui-theme="dark"] .monaco-editor .regexp,
-body[kui-theme="dark"] .monaco-editor .attribute,
-body[kui-theme="dark"] .monaco-editor .deletion,
-body[kui-theme="dark"] .monaco-editor .variable,
-body[kui-theme="dark"] .monaco-editor .template-variable,
-body[kui-theme="dark"] .monaco-editor .link,
-body[kui-theme="dark"] .monaco-editor .bullet {
+body[kui-theme-style="light"] .monaco-editor .meta,
+body[kui-theme-style="light"] .monaco-editor .subst,
+body[kui-theme-style="light"] .monaco-editor .symbol,
+body[kui-theme-style="light"] .monaco-editor .regexp,
+body[kui-theme-style="light"] .monaco-editor .attribute,
+body[kui-theme-style="light"] .monaco-editor .deletion,
+body[kui-theme-style="light"] .monaco-editor .variable,
+body[kui-theme-style="light"] .monaco-editor .template-variable,
+body[kui-theme-style="light"] .monaco-editor .link,
+body[kui-theme-style="light"] .monaco-editor .bullet {
+    transition: color 300ms ease-in-out;
     color: de935f
 }
 
 .monaco-editor .emphasis {
   font-style: italic;
+}
+
+/* hover/tooltip */
+body[kui-theme-style="light"] .monaco-editor-overlaymessage .message {
+    background-color: var(--color-base0C);
+    border-color: var(--color-base0C);
+    color: var(--color-base01) !important;
+}
+body[kui-theme-style="light"] .monaco-editor-overlaymessage .anchor {
+    border-top-color: var(--color-base0C);
 }
