fix: allow clients to take control over entity name table cell coloring
Fixes #675

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -540,8 +540,10 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
 .entity-name-group:not(.header-cell) .entity-name, .result-as-table .bold {
     font-weight: 500;
 }
-body[kui-theme-style="dark"] .entity-name-group:not(.header-cell) .entity-name, .result-as-table .bold {
-    /* in dark mode, emphasize the entity name */
+body[kui-theme-style="dark"] .result-table:not(.result-table-with-custom-entity-colors) .entity-name-group:not(.header-cell) .entity-name, .result-table:not(.result-table-with-custom-entity-colors) .bold {
+    /* in dark mode, emphasize the entity name, unless
+   (.result-table-with-custom-entity-colors) the client has requested
+   control over entity colors */
     font-weight: 600;
     color: var(--color-base0C);
 }
