fix(packages/app): make sure badges don't overflow tables
Fixes #704

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -1299,6 +1299,9 @@ code.fancy-code, code.fancy-code.hljs {
 }
 .badge-width {
     width: 10em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .sidecar-visible .badge-width {
     width: 7em;
