fix: various small fixes for tab UI
Fixes #717

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -49,14 +49,16 @@
             <div class='left-tab-stripe-button-label'>&nbsp;</div>
           </div>
         </div>
-        <div class='left-tab-stripe-button new-tab-button' id='new-tab-button'>
-          <i class='fas fa-plus-square repl-prompt-right-element-icon deemphasize'></i>
-        </div>
-        <div class='left-tab-stripe-button theme-button smaller-button' id='theme-button'>
-          <i class='fas fa-palette'></i>
-        </div>
-        <div class='left-tab-stripe-button smaller-button' id='help-button'>
-          <i class='fas fa-question-circle'></i>
+        <div class='left-tab-stripe-bottom-buttons'>
+          <div class='left-tab-stripe-button new-tab-button smaller-button' id='new-tab-button'>
+            <i class='fas fa-plus-square repl-prompt-right-element-icon deemphasize'></i>
+          </div>
+          <div class='left-tab-stripe-button theme-button smaller-button' id='theme-button'>
+            <i class='fas fa-palette'></i>
+          </div>
+          <div class='left-tab-stripe-button smaller-button' id='help-button'>
+            <i class='fas fa-question-circle'></i>
+          </div>
         </div>
       </div>
 
