--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -2681,6 +2681,16 @@ body {
     /* two-color charts; yellow versus cyan should be a pretty good default */
     --color-chart-0: var(--color-yellow);
     --color-chart-1: var(--color-cyan);
+
+    /* tab colors */
+    --color-tab-01: var(--color-base0D);
+    --color-tab-02: var(--color-base09);
+    --color-tab-03: var(--color-base0C);
+    --color-tab-04: var(--color-base0B);
+    --color-tab-05: var(--color-base0A);
+    --color-tab-06: var(--color-base0E);
+    --color-tab-07: var(--color-base08);
+    --color-tab-08: var(--color-base04);
 }
 
 @-webkit-keyframes flip {
