--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/light.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/light.css
@@ -6,14 +6,16 @@ body[kui-theme="Light"] {
     --color-base03: #f0f3f6;
     --color-base04: #dfe3e6;
     --color-base05: var(--color-base00);
+    --color-base06: var(--color-base01);
     --color-base07: #fff;
     --color-base08: #e71d32;
+    --color-base09: #bf5b17;
     --color-base0A: hsl(48, 100%, 38%);
     --color-base0B: #5aa700;
     --color-base0C: #00b4a0;
     --color-base0D: #3d70b2;
     --color-base0E: #beaed4;
-
+    
     --color-text-02: #5a6872;
 
     --color-light-red: rgba(231, 29, 50, 0.75);
@@ -51,18 +53,6 @@ body[kui-theme="Light"] {
 
     --color-ui-06: #f4f7fb; /* nick made up this signifier, it's not from carbon-components */
     --color-field-01: #f4f7fb;
-
-    --font-sans-serif: "IBM Plex Sans", sans-serif;
-    --font-monospace: "IBM Plex Mono","DejaVu Sans Mono","Bitstream Vera Sans Mono",Courier,monospace;
-
-    --color-tab-01: #666666;
-    --color-tab-02: #fdc086;
-    --color-tab-03: #386cb0;
-    --color-tab-04: #7fc97f;
-    --color-tab-05: #ffff99;
-    --color-tab-06: var(--color-magenta);
-    --color-tab-07: #f0027f;
-    --color-tab-08: #bf5b17;
 }
 
 .application-icon {
